# pdf-chat-app

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
demo/: rag_evaluation.csv
src/: parser.py  qa_chain.py  vector_store.py
tests/: test_parser.py  test_vector_store.py
